--- a/src/app/sidenav/sidenav.component.css
+++ b/src/app/sidenav/sidenav.component.css
@@ -13,6 +13,8 @@
         align-items: center;
         padding: 0.938rem 0.938rem 0 0.938rem;
         width: 100%;
+        padding-top: 30px;
+        padding-left: 10px;
 
         .logo {
             cursor: pointer;
