--- a/src/app/MAIN/feedbacks/feedbacks.component.html
+++ b/src/app/MAIN/feedbacks/feedbacks.component.html
@@ -5,30 +5,30 @@
   <form>
     <input type="text" #feedbackInput placeholder="What's on your mind..." />
   </form>
-  <button (click)="addFeedback(feedbackInput.value)">Post</button>
+  <button (click)="addFeedback(feedbackInput.value); feedbackInput.value = ''">Post</button>
 </div>
 
 <!-- Display feedback containers -->
 <div *ngIf="feedbackItems.length > 0" class="feedback-container">
-  <div *ngFor="let item of feedbackItems; let i = index">
+  <div *ngFor="let item of feedbackItems; let i = index" class="feedback-item">
     <div class="flex-container">
       <img src="{{ information.profilePicture }}" alt="" class="profile-pic-large" />
       <div class="container2">
         <!-- Edit mode -->
         <ng-container *ngIf="editingIndex === i; else viewMode">
           <input type="text" [(ngModel)]="item.feedback" />
-          <button (click)="saveEditedFeedback(item)">Save</button>
+          <button class="button-20 edit-button" (click)="saveEditedFeedback(item)">Save</button>
         </ng-container>
         <!-- View mode -->
         <ng-template #viewMode>
           <div class="feedback">{{ item.feedback }}</div>
-          <!-- Buttons section -->
-          <div>
-            <button (click)="editFeedback(i)">Edit</button>
-            <button (click)="deleteFeedback(i)">Delete</button>
-          </div>
         </ng-template>
       </div>
+    </div>
+    <!-- Buttons section (outside of feedback-item) -->
+    <div class="buttons-container" *ngIf="editingIndex !== i">
+      <button class="button-20 edit-button" (click)="editFeedback(i)">Edit</button>
+      <button class="button-20 delete-button" (click)="deleteFeedback(i)">Delete</button>
     </div>
   </div>
 </div>
