--- a/src/app/faculty/cvform/cvform.component.html
+++ b/src/app/faculty/cvform/cvform.component.html
@@ -8,7 +8,7 @@
             </div>
             <div class="form-group">
                 <label for="birthdate">BirthDate:</label>
-                <input type="text" class="form-control" name="birthdate" id="birthdate">
+                <input type="date" class="form-control" name="birthdate" id="birthdate">
             </div>
             <div class="form-group">
                 <label for="department">Department:</label>
