--- a/src/app/MAIN/feedbacks/feedbacks.component.css
+++ b/src/app/MAIN/feedbacks/feedbacks.component.css
@@ -9,7 +9,7 @@ h1 {
     margin-top: 2vh;
     margin-bottom: 2vh;
     width: 100%; 
-    padding: 2vw;   
+    padding: 3vw;   
     border-radius: 1vw;
     box-shadow: 0 0 2vw rgba(0, 0, 0, 0.1);
     background-color: #D9D9D9;
@@ -32,7 +32,7 @@ h1 {
 .container input{
     position: relative;
     height: auto;
-    height: 50px;
+    height: 100px;
     width: 100%;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     border: none;
@@ -84,7 +84,7 @@ h1 {
     flex-direction: column;
     flex-grow: 1;
     margin-left: 10px; /* Adjust margin to align with the image */
-    margin-top: 10px; /* Add margin to separate from the container above */
+    margin-top: 50px; /* Add margin to separate from the container above */
     max-width: 100vw; /* Set maximum width */
     word-wrap: break-word; /* Break words when they exceed container width */
 }
@@ -192,10 +192,39 @@ h1 {
   padding: 5px 10px;
   font-size: 14px;
 }
-.button-20-small {
-  padding: 5px 10px;
-  font-size: 14px;
+
+
+.delete-button-red {
+  background-color: #e74c3c; /* Red color */
+  border-color: #e74c3c;
 }
 
+.delete-button-red:hover {
+  background-color: #c0392b; /* Darker red color on hover */
+  border-color: #c0392b;
+}
+
+.save-button-green {
+  background-color: #2ecc71; /* Green color */
+  border-color: #2ecc71;
+}
+
+.save-button-green:hover {
+  background-color: #27ae60; /* Darker green color on hover */
+  border-color: #27ae60;
+}
+
+
+.save-button-green {
+  position: absolute;
+  top: 110%;
+  left: 85%; /* Position it to the right of the delete button with some spacing */
  
-  
+}
+
+.cancel-button{
+  position: absolute;
+  top: 110%;
+  left: 93%; /* Position it to the right of the delete button with some spacing */
+
+}
