--- a/src/app/loginuser/loginuser.component.css
+++ b/src/app/loginuser/loginuser.component.css
@@ -56,7 +56,7 @@
   font-family: 'Patrick Hand', sans-serif;
   text-align: center;
   padding: 30px;
-  border-radius: 30px;
+  border-radius: 0px;
   margin-top: 60px;
 }
 
@@ -73,8 +73,28 @@
   width: auto;
 }
 
+.form-control {
+  border-radius: 0%;
+}
+
+.show-password-btn {
+  top: 50%;
+  right: 10px; /* Adjust the position as needed */
+  background-color: transparent;
+  border: none;
+  padding: 0;
+}
+
+.eye-icon {
+  width: 30px; /* Adjust icon size as needed */
+  height: 30px;
+  margin-left: 20px;
+}
+
+
 .input-group {
   margin-bottom: 1rem;
+  border-radius: 0%;
 }
 
 input,
