--- a/src/app/loginuser/loginuser.component.css
+++ b/src/app/loginuser/loginuser.component.css
@@ -1,4 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
 
 * {
@@ -13,6 +12,10 @@
 .corner-image {
   position: absolute;
   z-index: -1;
+}
+
+.top-left, .top-right, .bottom-left, .bottom-right {
+  position: absolute;
 }
 
 .top-left {
@@ -56,16 +59,8 @@
   font-family: 'Patrick Hand', sans-serif;
   text-align: center;
   padding: 30px;
-  border-radius: 0px;
+  border-radius: 20px;
   margin-top: 60px;
-}
-
-.form-container .title {
-  color: #fff;
-  font-size: 23px;
-  text-transform: capitalize;
-  letter-spacing: 1px;
-  margin: 0 0 60px;
 }
 
 .input-group-text img {
@@ -73,39 +68,43 @@
   width: auto;
 }
 
-.form-control {
-  border-radius: 0%;
-}
-
-.show-password-btn {
-  top: 50%;
-  right: 10px; /* Adjust the position as needed */
+.toggle-password-btn {
+  position: absolute;
+  right: 10px;
+  z-index: 2; /* Ensures the button is always on top */
   background-color: transparent;
   border: none;
-  padding: 0;
+  cursor: pointer;
 }
 
 .eye-icon {
-  width: 30px; /* Adjust icon size as needed */
-  height: 30px;
-  margin-left: 20px;
+  width: 24px;
+  height: 24px;
 }
 
-
-.input-group {
-  margin-bottom: 1rem;
-  border-radius: 0%;
-}
-
-input,
-button {
+.login-btn {
   border-radius: 10px;
 }
 
-button {
-  transition: transform 0.3s;
+button:hover {
+  transform: none;
 }
 
-button:hover {
-  transform: scale(1.1);
+.input-group .form-control:focus + .toggle-password-btn {
+  z-index: 3; /* Increase z-index on focus */
+}
+
+.toggle-password-btn {
+  position: absolute;
+  right: 10px;
+  z-index: 2; /* Ensures the button is always on top */
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  outline: none; /* Removes focus outline */
+}
+
+.password-input:focus {
+  position: relative;
+  z-index: 1;
 }
