--- a/src/app/faculty/cv/cv.component.css
+++ b/src/app/faculty/cv/cv.component.css
@@ -1,3 +1,20 @@
+* h1{
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    font-variation-settings:
+      "slnt" 0;
+}
+
+* p{
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-variation-settings:
+      "slnt" 0;  
+}
 .container {
     display: grid;
 
@@ -5,8 +22,8 @@
 
 .cv {
     display: grid;
-    grid-template-rows: 170px 1500px;
-    grid-template-columns: 300px 1000px;
+    grid-template-rows: 180px 1583px;
+    grid-template-columns: 300px 940px;
     margin-bottom: 200px;
 }
 /* top */
@@ -43,38 +60,202 @@
     flex-direction: column;
 }
 
-.side-contact title {
-    
-}
-
 .side-contact-p{
-    margin-left: 50px;
+    margin-left: 10px;
     margin-right: 20px; 
     margin-top: 0; 
-    margin-bottom: 0;
+    margin-bottom: 10px;
     padding: 7px;
     font-size: 20px;
     font-weight: bold;
 }
 
 .box-2 hr {
-    margin: 0;
-    width: 80%;
+    margin-left: 8px;
+    width: 85%;
     height: 10px;
     border: none; /* Remove the default border */
     background-color: black; /* Set the background color to black */
     opacity: 1; /* Ensure full opacity */
 }
+.experties ul{
+    list-style-type: none;
+}
 
+.experties h1{
+    margin-left: 20px;
+    display: flex;
+    font-size: 35px;
+    flex-direction: column;
+    margin-top: 25px;
+    margin-bottom: 30px;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    font-variation-settings:
+      "slnt" 0;
+}
+.experties li{
+    font-size: 23px;
+    margin-top: 18px;
+}
 
+.honors-and-awards ul{
+    list-style-type:disc;
+}
 
+.honors-and-awards h1{
+    margin-left: 20px;
+    margin-top: 25px;
+    display: flex;
+    font-size: 35px;
+    flex-direction: column;
+    margin-bottom: 30px;
+}
+.honors-and-awards li{
+    font-size: 23px;
+    margin-top: 18px;
+}
 
+.certifications ul{
+    list-style-type: disc;
+}
 
+.certifications h1{
+    margin-left: 20px;
+    margin-top: 25px;
+    display: flex;
+    font-size: 35px;
+    flex-direction: column;
+    margin-bottom: 30px;
+}
+.certifications li{
+    font-size: 23px;
+    margin-top: 18px;
+}
 /* body */
 .box-3 {
     grid-row: 2/3;
     grid-column: 2/3;
     width: 100%;
     height: 100%;
+    margin: 0px;
+    margin-top: 15px;
+    margin-left: 15px;
     background-color: rgb(255, 255, 255);
+}
+
+.educational-attainment h1{
+    margin-left: 20px;
+    margin-top: 25px;
+    display: flex;
+    font-size: 35px;
+    flex-direction: column;
+    margin-bottom: 30px;
+}
+
+.educational-attainment ul{
+    list-style-type: none;
+}
+
+.educational-attainment li{
+    font-size: 23px;
+    margin-top: 10px;
+}
+.educational-attainment #degree{
+    color: #FF9100;
+}
+
+.industry-experience h1{
+    margin-left: 20px;
+    margin-top: 25px;
+    display: flex;
+    font-size: 35px;
+    flex-direction: column;
+    margin-bottom: 30px;
+}
+
+.industry-experience ul{
+    list-style-type: none;
+}
+
+.industry-experience li{
+    font-size: 23px;
+    margin-top: 10px;
+}
+
+.course-handled h1{
+    margin-left: 20px;
+    margin-top: 25px;
+    display: flex;
+    font-size: 35px;
+    flex-direction: column;
+    margin-bottom: 30px;
+}
+
+.course-handled ul{
+    list-style-type:none;
+}
+
+.course-handled li{
+    font-size: 23px;
+    margin-top: 10px;
+}
+
+.Research-community-extension h1{
+    margin-left: 20px;
+    margin-top: 25px;
+    display: flex;
+    font-size: 35px;
+    flex-direction: column;
+    margin-bottom: 30px;
+}
+
+.Research-community-extension ul{
+    list-style-type: none;
+}
+
+.Research-community-extension li{
+    font-size: 23px;
+    margin-top: 10px;
+}
+
+* li p{
+    margin: 0px;
+}
+
+.box-1 .top{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0px;
+}
+
+.top h1,p{
+    margin: 0px;
+}
+
+.top h1{
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    font-variation-settings:
+      "slnt" 0;
+    font-size: 50px; 
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+.top p{
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-variation-settings:
+      "slnt" 0;
+      font-size: 20px;
 }
