--- a/src/app/faculty/cv/cv.component.html
+++ b/src/app/faculty/cv/cv.component.html
@@ -1,9 +1,28 @@
-<div class="container">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="cv.component.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+</head>
+<body>
+  <div class="container">
     <div class="cv">
-      <div class="box-1"></div>
+      <div class="box-1">
+        <div class="top">
+          <h1>ProfessorX</h1>
+          <p style="font-weight: bold; margin-bottom: 5px;" >College of Computer Studies</p>
+          <p>IT Educator</p>
+          <p>11 Years in Teaching</p>
+        </div>
+      </div>
       <div class="box-2">
         <div class="image-profile">
-          <img src="/assets/Man1.png" alt="">
+          <img src={{information.profilePicture}} alt="">
         </div>
         <!-- side contact -->
         <div class="side-contact">
@@ -11,18 +30,118 @@
             <h1>Contact</h1>
           </div>
           <div class="side-contact-p">
-            <p>September 07, 1990</p>
-            <p>09614590035</p>
-            <p>professorxgordon
-            college.edu.ph</p>
+            <p>{{information.birthdate}}</p>
+            <p>{{information.contactNumber}}</p>
+            <p>{{information.gmail}}</p>
           </div>
+          <hr>
         </div>
-      
-        <hr>
-        
-        <!-- expertise -->
+        <div class="experties">
+          <h1>Experties</h1>
+            <ul>
+              <li><p>{{experties.skill1}}</p></li>
+              <li><p>{{experties.skill2}}</p></li>
+              <li><p>{{experties.skill3}}</p></li>
+              <li><p>{{experties.skill4}}</p></li>
+              <li><p>{{experties.skill1}}</p></li>
+            </ul>
+        </div>
+          <div class="honors-and-awards">
+            <h1>Honors and Awards</h1>
+              <ul>
+                <li><p>{{honorsAndAwards.award1}}</p></li>
+                <li><p>{{honorsAndAwards.award2}}</p></li>
+                <li><p>{{honorsAndAwards.award3}}</p></li>
+              </ul>
+          </div>
+          <div class="certifications">
+            <h1>Certifications</h1>
+              <ul>
+                <li><p>{{certifications.cert1}}</p></li>
+                <li><p>{{certifications.cert1}}</p></li>
+                <li><p>{{certifications.cert1}}</p></li>
+              </ul>
+          </div>
       </div>
-      <div class="box-3"></div>
+      <div class="box-3">
+        <div class="educational-attainment">
+          <h1>Educational Attainment</h1>
+            <ul>
+              <li>
+                <p  id="degree">{{educationalAttainment.degree1}}</p>
+                <ul>
+                  <li><p style="font-size: 18px;">{{educationalAttainment.school1}}</p></li>
+                </ul>
+              </li>
+            </ul>
+            <ul>
+              <li>
+                <p id="degree">{{educationalAttainment.degree2}}</p>
+                <ul>
+                  <li><p style="font-size: 18px;">{{educationalAttainment.school2}}</p></li>
+                </ul>
+              </li>
+            </ul>
+        </div>
+        <br>
+        <div class="industry-experience">
+          <h1>Industry Experience</h1>
+            <ul>
+              <li><p>{{industryExperience.school1}}</p>
+                <ul>
+                  <li><p style="color: #FF9100; font-size: 18px;">{{industryExperience.employment1}}</p>
+                    <ul>
+                      <li><p style="font-size: 18px;">{{industryExperience.workingYear1}}</p></li>
+                    </ul>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+            <ul>
+              <li><p>{{industryExperience.school2}}</p>
+                <ul>
+                  <li><p style="color: #FF9100; font-size: 18px;">{{industryExperience.employment2}}</p>
+                    <ul>
+                      <li><p style="font-size: 18px;">{{industryExperience.workingYear2}}</p></li>
+                    </ul>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+        </div>
+        <br>
+        <div class="course-handled">
+          <h1>Course Handled</h1>
+          <ul>
+            <li><p>{{courseHandled.course1}}</p></li>
+            <li><p>{{courseHandled.course2}}</p></li>
+            <li><p>{{courseHandled.course3}}</p></li>
+            <li><p>{{courseHandled.course4}}e</p></li>
+            <li><p>{{courseHandled.course5}}</p></li>
+          </ul>
+        </div>
+        <br>
+        <div class="Research-community-extension">
+          <H1>Research & Community Extensions</H1>
+          <ul>
+            <li><p style="color: #FF9100;">{{researchAndCommunityExtensions.research1}}</p>
+              <ul>
+                <li><p style="font-size: 18px;">{{researchAndCommunityExtensions.detail1}}</p></li>
+              </ul>
+            </li>
+          </ul>
+          <ul>
+            <li><p style="color: #FF9100;">{{researchAndCommunityExtensions.research2}}</p>
+              <ul>
+                <li><p style="font-size: 18px;">{{researchAndCommunityExtensions.detail1}}</p></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+      
     </div>
   </div>
+</body>
+</html>
   
