--- a/src/app/faculty/cvform/cvform.component.html
+++ b/src/app/faculty/cvform/cvform.component.html
@@ -1,31 +1,6 @@
 <div class="container">
     <form action="submit-cv.php" method="post" class="grid-container">
         <div class="group1">
-            <h3>Personal Information</h3>
-            <div class="form-group">
-                <label for="name">Name:</label>
-                <input type="text" class="form-control" name="name" id="name">
-            </div>
-            <div class="form-group">
-                <label for="birthdate">BirthDate:</label>
-                <input type="date" class="form-control" name="birthdate" id="birthdate">
-            </div>
-            <div class="form-group">
-                <label for="department">Department:</label>
-                <input type="text" class="form-control" name="department" id="department">
-            </div>
-            <div class="form-group">
-                <label for="position">Position:</label>
-                <input type="text" class="form-control" name="position" id="position">
-            </div>
-            <div class="form-group">
-                <label for="teaching_years">Years of Teaching:</label>
-                <input type="text" class="form-control" name="teaching_years" id="teaching_years">
-            </div>
-        </div>
-        
-        <!-- Contact Information -->
-        <div class="group1">
             <h3>Contact Information</h3>
             <div class="form-group">
                 <label for="mobile">Mobile #:</label>
@@ -49,46 +24,73 @@
                 <input type="text" class="form-control" name="x" id="x">
             </div>
         </div>
-        
-        <!-- Certifications -->
-        <div class="group1">
-            <h3>Certifications</h3>
-            <div class="form-group">
-                <label for="certification_name">Name:</label>
-                <input type="text" class="form-control" name="certification_name" id="certification_name">
-            </div>
-            <div class="form-group">
-                <label for="certification_department">Department:</label>
-                <input type="text" class="form-control" name="certification_department" id="certification_department">
-            </div>
-            <div class="form-group">
-                <label for="certification_position">Position:</label>
-                <input type="text" class="form-control" name="certification_position" id="certification_position">
-            </div>
-            <div class="form-group">
-                <label for="certification_years">Years of Teaching:</label>
-                <input type="text" class="form-control" name="certification_years" id="certification_years">
-            </div>
-        </div>
-        
         <!-- Industry Experience -->
         <div class="group1">
             <h3>Industry Experience</h3>
             <div class="form-group">
-                <label for="industry_name">Name:</label>
-                <input type="text" class="form-control" name="industry_name" id="industry_name">
+                <label for="industry_name">School 1:</label>
+                <input type="text" class="form-control" name="school1" id="school1">
             </div>
             <div class="form-group">
-                <label for="industry_department">Department:</label>
-                <input type="text" class="form-control" name="industry_department" id="industry_department">
+                <label for="industry_department">Emplyomen Status 1:</label>
+                <input type="text" class="form-control" name="employment-status1" id="employment-status1">
             </div>
             <div class="form-group">
-                <label for="industry_position">Position:</label>
-                <input type="text" class="form-control" name="industry_position" id="industry_position">
+                <label for="industry_position">Duration 1:</label>
+                <input type="text" class="form-control" name="duration1" id="duration1">
             </div>
             <div class="form-group">
-                <label for="industry_years">Years of Teaching:</label>
-                <input type="text" class="form-control" name="industry_years" id="industry_years">
+                <label for="industry_name">School 2:</label>
+                <input type="text" class="form-control" name="school2" id="school2">
+            </div>
+            <div class="form-group">
+                <label for="industry_department">Emplyomen Status 2:</label>
+                <input type="text" class="form-control" name="employment-status2" id="employment-status2">
+            </div>
+            <div class="form-group">
+                <label for="duration2">Duration 2:</label>
+                <input type="text" class="form-control" name="duration2" id="duration2">
+            </div>
+            <div class="form-group">
+                <label for="industry_name">School 3:</label>
+                <input type="text" class="form-control" name="school3" id="school3">
+            </div>
+            <div class="form-group">
+                <label for="industry_department">Emplyomen Status 3:</label>
+                <input type="text" class="form-control" name="employment-status3" id="employment-status3">
+            </div>
+            <div class="form-group">
+                <label for="industry_position">Duration 3:</label>
+                <input type="text" class="form-control" name="duration3" id="duration3">
+            </div>
+        </div>
+         
+        <!-- Educational Attainment -->
+        <div class="group1">
+            <h3>Educational Attainment</h3>
+            <div class="form-group">
+                <label for="education_name">Education 1:</label>
+                <input type="text" class="form-control" name="education1" id="education1">
+            </div>
+            <div class="form-group">
+                <label for="education_department">School 1:</label>
+                <input type="text" class="form-control" name="school1" id="school1">
+            </div>
+            <div class="form-group">
+                <label for="education_name">Education 2:</label>
+                <input type="text" class="form-control" name="education2" id="education2">
+            </div>
+            <div class="form-group">
+                <label for="education_department">School 2:</label>
+                <input type="text" class="form-control" name="school2" id="school2">
+            </div>
+            <div class="form-group">
+                <label for="education_name">Education 3:</label>
+                <input type="text" class="form-control" name="education3" id="education3">
+            </div>
+            <div class="form-group">
+                <label for="education_department">School 3:</label>
+                <input type="text" class="form-control" name="school3" id="school3">
             </div>
         </div>
         
@@ -117,69 +119,117 @@
             </div>
         </div>
         
+         <!-- Certifications -->
+         <div class="group1">
+            <h3>Certifications</h3>
+            <div class="form-group">
+                <label for="certification_name">Certification 1:</label>
+                <input type="text" class="form-control" name="certification1" id="certification1">
+            </div>
+            <div class="form-group">
+                <label for="certification_name">Certification 2:</label>
+                <input type="text" class="form-control" name="certification2" id="certification2">
+            </div>
+            <div class="form-group">
+                <label for="certification_name">Certification 3:</label>
+                <input type="text" class="form-control" name="certification3" id="certification3">
+            </div>
+        </div>
         <!-- Honors and Awards -->
         <div class="group1">
-            <h3>Honors and Awards</h3>
+            <h3>Achievements</h3>
             <div class="form-group">
-                <label for="award_name">Name:</label>
-                <input type="text" class="form-control" name="award_name" id="award_name">
+                <label for="award_name">Achievement 1:</label>
+                <input type="text" class="form-control" name="achievement1" id="Achievement1">
             </div>
             <div class="form-group">
-                <label for="award_department">Department:</label>
-                <input type="text" class="form-control" name="award_department" id="award_department">
+                <label for="award_name">Achievement 2:</label>
+                <input type="text" class="form-control" name="achievement2" id="Achievement2">
             </div>
             <div class="form-group">
-                <label for="award_position">Position:</label>
-                <input type="text" class="form-control" name="award_position" id="award_position">
+                <label for="award_name">Achievement 3:</label>
+                <input type="text" class="form-control" name="achievement3" id="Achievement3">
             </div>
             <div class="form-group">
-                <label for="award_years">Years of Teaching:</label>
-                <input type="text" class="form-control" name="award_years" id="award_years">
-            </div>
-        </div>
-        
-        <!-- Educational Attainment -->
-        <div class="group1">
-            <h3>Educational Attainment</h3>
-            <div class="form-group">
-                <label for="education_name">Name:</label>
-                <input type="text" class="form-control" name="education_name" id="education_name">
-            </div>
-            <div class="form-group">
-                <label for="education_department">Department:</label>
-                <input type="text" class="form-control" name="education_department" id="education_department">
-            </div>
-            <div class="form-group">
-                <label for="education_position">Position:</label>
-                <input type="text" class="form-control" name="education_position" id="education_position">
-            </div>
-            <div class="form-group">
-                <label for="education_years">Years of Teaching:</label>
-                <input type="text" class="form-control" name="education_years" id="education_years">
+                <label for="award_name">Achievement 4:</label>
+                <input type="text" class="form-control" name="achievement4" id="Achievement4">
             </div>
         </div>
-        
+       
         <!-- Course Handled -->
         <div class="group1">
             <h3>Course Handled</h3>
             <div class="form-group">
-                <label for="course_name">Name:</label>
-                <input type="text" class="form-control" name="course_name" id="course_name">
+                <label for="course_name">Course 1:</label>
+                <input type="text" class="form-control" name="course1" id="course1">
             </div>
             <div class="form-group">
-                <label for="course_department">Department:</label>
-                <input type="text" class="form-control" name="course_department" id="course_department">
+                <label for="course_name">Course 2:</label>
+                <input type="text" class="form-control" name="course2" id="course2">
             </div>
             <div class="form-group">
-                <label for="course_position">Position:</label>
-                <input type="text" class="form-control" name="course_position" id="course_position">
+                <label for="course_name">Course 3:</label>
+                <input type="text" class="form-control" name="course3" id="course3">
             </div>
             <div class="form-group">
-                <label for="course_years">Years of Teaching:</label>
-                <input type="text" class="form-control" name="course_years" id="course_years">
+                <label for="course_name">Course 4:</label>
+                <input type="text" class="form-control" name="course4" id="course4">
+            </div>
+            <div class="form-group">
+                <label for="course_name">Course 5:</label>
+                <input type="text" class="form-control" name="course5" id="course5">
+            </div>
+            <div class="form-group">
+                <label for="course_name">Course 6:</label>
+                <input type="text" class="form-control" name="course6" id="course6">
+            </div>
+            <div class="form-group">
+                <label for="course_name">Course 7:</label>
+                <input type="text" class="form-control" name="course7" id="course7">
+            </div>
+            <div class="form-group">
+                <label for="course_name">Course 8:</label>
+                <input type="text" class="form-control" name="course8" id="course8">
+            </div>
+            <div class="form-group">
+                <label for="course_name">Course 9:</label>
+                <input type="text" class="form-control" name="course9" id="course9">
+            </div>
+            <div class="form-group">
+                <label for="course_name">Course 10:</label>
+                <input type="text" class="form-control" name="course10" id="course10">
             </div>
         </div>
-        
+  <div class="group1">
+            <h3>Research And Community</h3>
+            <!-- Research 1 -->
+            <div class="form-group">
+                <label for="education_name">Research Title 1:</label>
+                <input type="text" class="form-control" name="research-title1" id="research-title1">
+            </div>
+            <div class="form-group description">
+                <label for="education_department">Research description 1:</label>
+                <textarea class="form-control" name="description1" id="description1" rows="4"></textarea>
+            </div>
+            <!-- Research 2 -->
+            <div class="form-group">
+                <label for="education_name">Research Title 2:</label>
+                <input type="text" class="form-control" name="research-title2" id="research-title2">
+            </div>
+            <div class="form-group description">
+                <label for="education_department">Research description 2:</label>
+                <textarea class="form-control" name="description2" id="description2" rows="4"></textarea>
+            </div>
+            <!-- Research 3 -->
+            <div class="form-group">
+                <label for="education_name">Research Title 3:</label>
+                <input type="text" class="form-control" name="research-title3" id="research-title3">
+            </div>
+            <div class="form-group description">
+                <label for="education_department">Research description 3:</label>
+                <textarea class="form-control" name="description3" id="description3" rows="4"></textarea>
+            </div>
+        </div>
         <!-- Submit Button -->
         <input type="submit" value="Submit">
     </form>
