--- a/src/app/faculty/cv/cv.component.css
+++ b/src/app/faculty/cv/cv.component.css
@@ -20,209 +20,13 @@
 
 }
 
-.cv {
-    display: grid;
-    grid-template-rows: 180px 1583px;
-    grid-template-columns: 300px 940px;
-    margin-bottom: 200px;
-}
 /* top */
-.box-1 {
-    grid-row: 1/2;
-    grid-column: 2/3;
-    background-color: #FFB332;
+.top h2{
+    font-size: 23px;
+    word-spacing: 3px;
 }
-
-/* side */
-.box-2 {
-    grid-row: 1/3;
-    grid-column: 1/2;
-    background-color: #FF9100;
-}
-
-.image-profile{
-    display: flex;
-    height: 17% ;
-    justify-content: center;
-    align-items: center;
-}
-.box-2 img {
-    width: 200px;
-    height: 200px;
-    border: black 8px solid;
-    border-radius: 50%;
-}
-
-.side-contact{
-    margin-left: 20px;
-    display: flex;
-    height: 20;
-    flex-direction: column;
-}
-
-.side-contact-p{
-    margin-left: 10px;
-    margin-right: 20px; 
-    margin-top: 0; 
-    margin-bottom: 10px;
-    padding: 7px;
-    font-size: 20px;
+.top h1{
     font-weight: bold;
-}
-
-.box-2 hr {
-    margin-left: 8px;
-    width: 85%;
-    height: 10px;
-    border: none; /* Remove the default border */
-    background-color: black; /* Set the background color to black */
-    opacity: 1; /* Ensure full opacity */
-}
-.experties ul{
-    list-style-type: none;
-}
-
-.experties h1{
-    margin-left: 20px;
-    display: flex;
-    font-size: 35px;
-    flex-direction: column;
-    margin-top: 25px;
-    margin-bottom: 30px;
-    font-family: "Inter", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 600;
-    font-style: normal;
-    font-variation-settings:
-      "slnt" 0;
-}
-.experties li{
-    font-size: 23px;
-    margin-top: 18px;
-}
-
-.honors-and-awards ul{
-    list-style-type:disc;
-}
-
-.honors-and-awards h1{
-    margin-left: 20px;
-    margin-top: 25px;
-    display: flex;
-    font-size: 35px;
-    flex-direction: column;
-    margin-bottom: 30px;
-}
-.honors-and-awards li{
-    font-size: 23px;
-    margin-top: 18px;
-}
-
-.certifications ul{
-    list-style-type: disc;
-}
-
-.certifications h1{
-    margin-left: 20px;
-    margin-top: 25px;
-    display: flex;
-    font-size: 35px;
-    flex-direction: column;
-    margin-bottom: 30px;
-}
-.certifications li{
-    font-size: 23px;
-    margin-top: 18px;
-}
-/* body */
-.box-3 {
-    grid-row: 2/3;
-    grid-column: 2/3;
-    width: 100%;
-    height: 100%;
-    margin: 0px;
-    margin-top: 15px;
-    margin-left: 15px;
-    background-color: rgb(255, 255, 255);
-}
-
-.educational-attainment h1{
-    margin-left: 20px;
-    margin-top: 25px;
-    display: flex;
-    font-size: 35px;
-    flex-direction: column;
-    margin-bottom: 30px;
-}
-
-.educational-attainment ul{
-    list-style-type: none;
-}
-
-.educational-attainment li{
-    font-size: 23px;
-    margin-top: 10px;
-}
-.educational-attainment #degree{
-    color: #FF9100;
-}
-
-.industry-experience h1{
-    margin-left: 20px;
-    margin-top: 25px;
-    display: flex;
-    font-size: 35px;
-    flex-direction: column;
-    margin-bottom: 30px;
-}
-
-.industry-experience ul{
-    list-style-type: none;
-}
-
-.industry-experience li{
-    font-size: 23px;
-    margin-top: 10px;
-}
-
-.course-handled h1{
-    margin-left: 20px;
-    margin-top: 25px;
-    display: flex;
-    font-size: 35px;
-    flex-direction: column;
-    margin-bottom: 30px;
-}
-
-.course-handled ul{
-    list-style-type:none;
-}
-
-.course-handled li{
-    font-size: 23px;
-    margin-top: 10px;
-}
-
-.Research-community-extension h1{
-    margin-left: 20px;
-    margin-top: 25px;
-    display: flex;
-    font-size: 35px;
-    flex-direction: column;
-    margin-bottom: 30px;
-}
-
-.Research-community-extension ul{
-    list-style-type: none;
-}
-
-.Research-community-extension li{
-    font-size: 23px;
-    margin-top: 10px;
-}
-
-* li p{
-    margin: 0px;
 }
 
 .box-1 .top{
@@ -258,4 +62,365 @@
     font-variation-settings:
       "slnt" 0;
       font-size: 20px;
+    margin: 0px;
 }
+
+.cv {
+    display: grid;
+    grid-template-rows:185px 1583px;
+    grid-template-columns: 325px 915px;
+    margin-bottom: 200px;
+}
+
+.box-1 {
+    grid-row: 1/2;
+    grid-column: 2/3;
+    background-color: #FFB332;
+}
+
+/* side */
+.box-2 {
+    grid-row: 1/3;
+    grid-column: 1/2;
+    background-color: #FF9100;
+}
+
+.image-profile{
+    display: flex;
+    height: 17% ;
+    justify-content: center;
+    align-items: center;
+}
+.box-2 .image-profile img {
+    width: 200px;
+    height: 200px;
+    border: black 8px solid;
+    border-radius: 50%;
+}
+
+/* contacts */
+.side-contact{
+    margin-left: 20px;
+    display: flex;
+    height: 20;
+    flex-direction: column;
+}
+
+.side-contact .side-contact-info{
+    margin-left: -12px;
+}
+
+.side-contact li{
+    margin-left: 10px;
+    margin-right: 20px; 
+    margin-top: 0; 
+    margin-bottom: 10px;
+    padding: 7px;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.side-contact ul{
+    list-style-type: none;
+}
+
+.side-contact-info li{
+    display: flex;
+    flex-direction: row;
+}
+
+.side-contact-info p{
+    font-weight: 550;
+}
+
+.side-contact-info ul{
+    margin: 0px;
+    padding: 0px;
+}
+.side-contact-info img{
+    width: 25px;
+    height: 25px;
+    border: none;
+    margin-right: 20px;
+    border-radius: 0px;
+}
+.box-2 hr {
+    margin-left: 8px;
+    width: 85%;
+    height: 12px;
+    border: none; /* Remove the default border */
+    background-color: black; /* Set the background color to black */
+    opacity: 1; /* Ensure full opacity */
+}
+
+/* expertise */
+.expertise ul{
+    list-style-type: none;
+    margin-bottom:5px;
+}
+
+.expertise h1{
+    margin-left: 20px;
+    display: flex;
+    font-size: 35px;
+    flex-direction: column;
+    margin-top: 25px;
+    margin-bottom: 30px;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    font-variation-settings:
+      "slnt" 0;
+}
+.expertise li{
+    font-size: 23px;
+    margin-top: 18px;
+}
+
+/* honors and awards */
+
+.honors-and-awards ul{
+    margin-bottom:35px;
+}
+
+.honors-and-awards h1{
+    margin-left: 20px;
+    margin-top: 25px;
+    display: flex;
+    font-size: 35px;
+    flex-direction: column;
+    margin-bottom: 30px;
+}
+.honors-and-awards li{
+    font-size: 20px;
+    margin-top: 18px;
+}
+
+/* certifications */
+
+.certifications ul{
+    margin-bottom:35px;
+}
+
+.certifications h1{
+    margin-left: 20px;
+    margin-top: 25px;
+    display: flex;
+    font-size: 35px;
+    flex-direction: column;
+    margin-bottom: 30px;
+}
+.certifications li{
+    font-size: 20px;
+    margin-top: 18px;
+}
+
+/* body */
+
+.box-3 {
+    grid-row: 2/3;
+    grid-column: 2/3;
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    background-color: #FFFFF0;
+}
+
+.box-3 h1,li,ul,p{
+    margin-left: 10px;
+    margin-top: 10px;
+}
+
+/* educational attainment */
+
+.educational-attainment-container h1{
+    margin-left: 20px;
+    margin-top: 25px;
+    display: flex;
+    font-size: 35px;
+    flex-direction: column;
+    margin-bottom: 30px;
+    margin-top: 10;
+}
+
+.educational-attainment ul{
+    list-style-type: none;
+    margin-bottom: 45px;
+}
+
+.educational-attainment li p{
+    font-size: 15px;
+    margin: 0px;
+    padding: 0px;
+}
+
+.educational-attainment ul li p {
+    margin-bottom: -20px; 
+}
+
+.educational-attainment .degree{
+    color: #FF9100;
+    font-weight: 600;
+    font-size: 23px !important;
+}
+  
+/* industry Experience */
+
+.industry-experience h1{
+    margin-left: 20px;
+    margin-top: 25px;
+    display: flex;
+    font-size: 35px;
+    flex-direction: column;
+    margin-bottom: 30px;
+}
+
+.industry-experience ul{
+    list-style-type: none;
+    margin-bottom: 45px;
+}
+
+.industry-experience li{
+    font-size: 23px;
+    margin-bottom: -20px;
+}
+.industry-experience-school{
+    font-size: 25px;
+    font-weight: 550;
+}
+.row2{
+    margin-left: 30px;
+    color: #FF9100;
+}
+
+.row3{
+    margin-left: 60px;
+}
+
+/* Course handled */
+
+.course-handled h1 {
+    margin-left: 20px;
+    display: flex;
+    font-size: 35px;
+    flex-direction: column;
+    margin-bottom: 30px;
+  }
+  
+  .course-handled .course-columns {
+    display: flex;
+    justify-content: space-between;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+  
+  .course-handled ul {
+    list-style-image: url('/assets/right-arrow.png'); 
+    padding: 0;
+    margin: 0;
+    width: 45%;
+    margin-left: 10px;
+  }
+  
+  .course-handled li {
+    font-size: 23px;
+    margin-top: 10px;
+  }
+
+/* Research and Comunity Extensions */
+
+.Research-community-extension h1{
+    margin-left: 20px;
+    margin-top: 25px;
+    display: flex;
+    font-size: 35px;
+    flex-direction: column;
+    margin-bottom: 30px;
+}
+
+.Research-community-extension ul{
+    list-style-type: none;
+}
+
+.Research-community-extension li{
+    font-size: 23px;
+    margin-top: 10px;
+}
+
+* li p{
+    margin: 0px;
+}
+
+.research1 h2{
+    font-size: 25px;
+    color: #FF9100 ;
+    font-weight: 550px;
+}
+.research1 ul:first-child li p { 
+    font-size: 15px !important;
+    margin-left: -50px;
+}
+.research2 h2{
+    font-size: 25px;
+    color: #FF9100 ;
+    font-weight: 550px;
+
+
+}
+.research2 ul:first-child li p { 
+    font-size: 15px !important;
+    margin-left: -50px;
+}
+.research3 h2{
+    font-size: 25px;
+    color: #FF9100 ;
+    font-weight: 550px;
+
+
+}
+.research3 ul:first-child li p { 
+    font-size: 15px !important;
+    margin-left: -50px;
+}
+
+.research1, .research2, .research3{
+    margin-bottom: 35px;
+}
+
+/* Social media links */
+
+.social-media {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    margin-top: 20px;
+    width: 325px;
+    height: 200px;
+}
+
+.social-media ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.social-media ul li {
+    margin-right: 20px;
+}
+
+.social-media ul li:last-child {
+    margin-right: 0;
+}
+
+.social-media ul li img {
+    width: 25px;
+    height: 25px;
+    border: none;
+    border-radius: 0px;
+}
+
